migrate code to JDK25 apis and constructs