@@ -68,7 +68,7 @@ public class ReadmeCodeSamplesTest {
 		}
 
 		Assertions.assertEquals(1, files.size());
-		Assertions.assertEquals("/foo/bar/test", files.get(0).toString());
+		Assertions.assertEquals("/foo/bar/test", files.getFirst().toString());
 		Assertions.assertEquals(4, Files.size(testFile));
 	}
 
