@@ -9,7 +9,6 @@ import org.junit.jupiter.api.Test;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.security.NoSuchAlgorithmException;
 import java.security.SecureRandom;
 import java.util.Scanner;
@@ -26,15 +25,15 @@ public class HealthCheckIntegrationTest {
 
 	public static void main(String[] args) throws IOException, NoSuchAlgorithmException {
 		try (Scanner scanner = new Scanner(System.in)) {
-			System.out.println("Enter path to vault:");
-			Path p = Paths.get(scanner.nextLine());
+			IO.println("Enter path to vault:");
+			Path p = Path.of(scanner.nextLine());
 
 			var masterkeyFileAccess = new MasterkeyFileAccess(new byte[0], SecureRandom.getInstanceStrong());
 			var masterkeyFile = p.resolve("masterkey.cryptomator");
 			var vaultConfigFile = p.resolve("vault.cryptomator");
 			var unverifiedCfg = VaultConfig.decode(Files.readString(vaultConfigFile));
 
-			System.out.println("Enter password [WARNING: not obfuscated]");
+			IO.println("Enter password [WARNING: not obfuscated]");
 			String pw = scanner.nextLine();
 
 			try (var masterkey = masterkeyFileAccess.load(masterkeyFile, pw)) {
@@ -42,7 +41,7 @@ public class HealthCheckIntegrationTest {
 				var cryptor = CryptorProvider.forScheme(verifiedCfg.getCipherCombo()).provide(masterkey, SecureRandom.getInstanceStrong());
 				var executor = Executors.newSingleThreadExecutor();
 				HealthCheck.allChecks().forEach(check -> {
-					System.out.println("Running " + check.name());
+					IO.println("Running " + check.name());
 					var results = check.check(p, verifiedCfg, masterkey, cryptor, executor);
 					results.forEach(System.out::println);
 				});
